--- a/src/components/login/loginContainer.module.css
+++ b/src/components/login/loginContainer.module.css
@@ -1,13 +1,20 @@
+h1,
+h2 {
+  cursor: none;
+  user-select: none;
+}
 .loginContainer,
 .rowContainer,
 .leftCol,
 .rightCol {
   --bs-gutter-x: 0;
 }
+
 .loginContainer {
   height: 100vh;
   background: #fd9f09;
 }
+
 .rowContainer {
   display: grid;
   grid-template-columns: auto 45.5%;
@@ -23,41 +30,48 @@
   align-items: center;
   justify-content: center;
 }
+
 .rightCol {
   height: 100vh;
   background: white;
+  display: grid;
+  justify-items: center;
+  align-content: center;
 }
 
 .logo {
   width: 14%;
 }
+
 .logoContainer {
-  margin-top: -9%;
+  margin-top: -5%;
   display: grid;
   grid-template-columns: 1fr;
   justify-items: center;
 }
 
-h1 {
-  margin-top: -0.5%;
+.bgTitle {
   color: white;
   font-size: 96px;
-  font-weight: bolder;
+  font-weight: 800;
   text-align: center;
-  font-family: Inter, poppins, sans-serif;
+  font-family: Inter, sans-serif;
   text-transform: uppercase;
 }
-h2 {
+
+.bgTitle2 {
   margin-top: -2%;
   color: white;
   font-size: 40px;
-  font-weight: bolder;
+  font-weight: 800;
   text-align: center;
-  font-family: Inter, poppins, sans-serif;
+  font-family: Inter, sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
 }
+
 .title {
   display: flex;
   justify-content: center;
+  margin-top: -0.75%;
 }
