--- a/src/components/login/loginButton.module.css
+++ b/src/components/login/loginButton.module.css
@@ -20,3 +20,18 @@
   background: #fd9f09 !important;
   border-color: #fd9f09 !important;
 }
+
+@media screen and (min-width: 899px) and (max-width: 1199px) {
+  .connectButton {
+    font-size: 18px;
+    padding: 8px 8px 9px;
+    width: 50%;
+  }
+}
+@media screen and (min-width: 1199px) and (max-width: 1519px) {
+  .connectButton {
+    font-size: 18px;
+    padding: 8px 8px 9px;
+    width: 60%;
+  }
+}
