--- a/src/components/login/button/loginButton.module.css
+++ b/src/components/login/button/loginButton.module.css
@@ -20,7 +20,26 @@
   background: #fd9f09 !important;
   border-color: #fd9f09 !important;
 }
-
+@media screen and (max-width: 480px) {
+  .connectButton {
+    font-size: 21px;
+    width: 80%;
+    padding: 7px;
+    margin-top: 12px;
+  }
+  .buttonComponent {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+}
+@media screen and (min-width: 769px) and (max-width: 900px) {
+}
 @media screen and (min-width: 899px) and (max-width: 1199px) {
   .connectButton {
     font-size: 18px;
