--- a/src/components/login/loginContainer.module.css
+++ b/src/components/login/loginContainer.module.css
@@ -84,8 +84,83 @@ h2 {
   user-select: none;
 }
 
-/*STYLES FOR LAPTOP*/
-@media screen and (min-width: 900px) and (max-width: 1199px) {
+@media screen and (max-width: 480px) {
+  .wrapper {
+    height: 100vh;
+    background: #fd9f09 url("../../assets/images/loginMobileBg.svg") no-repeat
+      center;
+    background-position-y: 45%;
+    background-size: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+  }
+  .logoContainer img {
+    scale: 1.5;
+    margin-bottom: 30%;
+  }
+  .logoContainer {
+    height: 40%;
+    width: 100%;
+    margin-top: 0.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .logoContainer h1 {
+    font-size: 42px;
+  }
+  .logoContainer h2 {
+    font-size: 24px;
+  }
+  .logoContainer .title svg {
+    font-size: 42px;
+    margin-inline: -1%;
+    margin-top: 0.7%;
+  }
+
+  .logoContainer .title svg:nth-child(3) {
+    transform: scaleX(-1);
+  }
+}
+@media screen and (max-width: 398px) {
+  .logoContainer h1 {
+    font-size: 40px;
+  }
+  .logoContainer h2 {
+    font-size: 20px;
+  }
+  .logoContainer .title svg {
+    font-size: 40px;
+  }
+  .logoContainer img {
+    scale: 1.4;
+    margin-bottom: 25%;
+  }
+}
+@media screen and (max-width: 382px) {
+  .logoContainer img {
+    scale: 1.2;
+    margin-bottom: 20%;
+  }
+  .logoContainer h1 {
+    font-size: 32px;
+  }
+  .logoContainer h2 {
+    font-size: 20px;
+  }
+  .logoContainer .title svg {
+    font-size: 32px;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 768px) {
+}
+@media screen and (min-width: 769px) and (max-width: 900px) {
+}
+@media screen and (min-width: 900px) and (max-width: 1198px) {
   .loginContainerLaptop {
     background: #fd9f09 url("../../assets/images/loginBackground.svg") no-repeat;
     background-size: 120%;
@@ -148,7 +223,7 @@ h2 {
     margin-top: -1.5%;
   }
 }
-@media screen and (min-width: 900px) and (max-width: 1199px) and (max-height: 675px) {
+@media screen and (min-width: 900px) and (max-width: 1198px) and (max-height: 675px) {
   .logoContainer {
     margin-top: 0;
   }
@@ -176,7 +251,7 @@ h2 {
     margin-top: -4%;
   }
 }
-@media screen and (min-width: 1199px) and (max-width: 1519px) {
+@media screen and (min-width: 1199px) {
   .bgTitle {
     font-size: 72px;
   }
@@ -192,6 +267,6 @@ h2 {
   }
   .logoContainer .logo {
     scale: 1;
-    margin-bottom: 0%;
+    margin-bottom: 0;
   }
 }
