--- a/src/components/login/loginForm.module.css
+++ b/src/components/login/loginForm.module.css
@@ -125,6 +125,133 @@
   grid-template-columns: 1fr 1fr;
 }
 
+@media screen and (max-width: 480px) {
+  .top input:not(.rememberMeContainer input[type="checkbox"]),
+  .top input:not(.rememberMeContainer input[type="checkbox"]):focus {
+    text-align: center;
+    width: 80%;
+    margin: 0 auto;
+    font-family: Quicksand, sans-serif;
+    font-weight: 400;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #adadad;
+    border-radius: 0;
+    box-shadow: none;
+    padding: 0;
+  }
+
+  .top input:not(.rememberMeContainer input[type="checkbox"])::placeholder {
+    color: #adadad;
+  }
+
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    padding-top: 30px;
+    width: 100%;
+    border-radius: 40px 40px 0 0;
+    background: #fff;
+    --bs-gutter-x: 0;
+    font-family: Quicksand, sans-serif;
+    height: 60%;
+  }
+  .wrapper h1 {
+    font-size: 32px;
+    font-weight: 500;
+    text-align: center;
+    padding: 10px 0 0 0;
+  }
+  .errorMsg {
+    font-size: 18px;
+    text-align: center;
+    margin: -10px 0 0 0;
+    padding-bottom: 10px;
+  }
+  .top h1 {
+    margin: 0;
+    padding: 16px;
+  }
+  .top {
+    width: 100%;
+    padding: 18px 0;
+    background: transparent;
+  }
+  .top label {
+    padding: 5px 0 0;
+    display: flex;
+    justify-content: center;
+    gap: 7px;
+    text-align: center;
+    font-size: 21px;
+  }
+  .top svg {
+    margin-top: -3%;
+  }
+  .top input {
+    margin-top: 1%;
+    text-align: center;
+    font-size: 20px;
+  }
+  .fields {
+    padding: 14px 0 0;
+  }
+  .fields:nth-child(1) {
+    padding: 0;
+    margin-top: 0;
+  }
+  .fields:nth-child(4) {
+    padding: 0;
+  }
+  .forgottenContainer a {
+    font-family: Quicksand, sans-serif;
+    color: #333333;
+    text-decoration: none;
+    font-size: 14px;
+  }
+  .forgottenContainer a:hover {
+    color: #fd9f09;
+  }
+  .forgottenContainer a:active {
+    color: #ffffff;
+  }
+
+  .rememberMeContainer label {
+    font-size: 14px;
+  }
+  .rememberMeContainer input[type="checkbox"] {
+    zoom: 1;
+    margin-bottom: -1.5%;
+  }
+
+  .extraField {
+    padding: 25px 0 15px 0;
+    width: 100%;
+    margin-inline: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+  }
+  .extraField div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .fields {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+}
+@media screen and (min-width: 769px) and (max-width: 900px) {
+}
+
 @media screen and (min-width: 899px) and (max-width: 1199px) {
   .formTitleLaptop {
     color: #fd9f09;
