--- a/src/components/login/LoginContainer.module.css
+++ b/src/components/login/LoginContainer.module.css
@@ -24,7 +24,8 @@ h2 {
 
 .leftCol {
   height: 100vh;
-  background: #fd9f09 url("../../assets/images/loginBackground.svg") no-repeat;
+  background: #fd9f09 url("../../assets/images/backgrounds/loginBackground.svg")
+    no-repeat;
   background-size: 120%;
   background-position-y: 40%;
   background-position-x: 47%;
@@ -87,8 +88,8 @@ h2 {
 @media screen and (max-width: 576px) {
   .wrapper {
     height: 100vh;
-    background: #fd9f09 url("../../assets/images/loginMobileBg.svg") no-repeat
-      center;
+    background: #fd9f09 url("../../assets/images/backgrounds/loginMobileBg.svg")
+      no-repeat center;
     background-position-y: 45%;
     background-size: 100%;
     display: flex;
@@ -158,7 +159,8 @@ h2 {
 }
 @media screen and (min-width: 576px) and (max-width: 900px) {
   .loginContainerLaptop {
-    background: #fd9f09 url("../../assets/images/loginBackground.svg") no-repeat;
+    background: #fd9f09
+      url("../../assets/images/backgrounds/loginBackground.svg") no-repeat;
     background-size: 120%;
     background-position-x: 50%;
     background-position-y: 33%;
@@ -222,7 +224,8 @@ h2 {
 }
 @media screen and (min-width: 900px) and (max-width: 1199px) {
   .loginContainerLaptop {
-    background: #fd9f09 url("../../assets/images/loginBackground.svg") no-repeat;
+    background: #fd9f09
+      url("../../assets/images/backgrounds/loginBackground.svg") no-repeat;
     background-size: 120%;
     background-position-x: 50%;
     background-position-y: 33%;
