--- a/src/pages/Dashboard.module.css
+++ b/src/pages/Dashboard.module.css
@@ -10,7 +10,7 @@ body {
   );
 }
 .title {
-  height: 22vh;
+  height: 18vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,11 +23,58 @@ body {
   color: #fff;
 }
 .content {
+  padding: 25px 20px;
   background-color: white;
-  height: 78vh;
   border-radius: 40px 40px 0 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
+  gap: 14px;
+}
+
+@media screen and (max-width: 412px) {
+  .content {
+    padding: 20px 20px;
+    height: 83.5vh;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    background: #fd9f09 url("@/assets/images/backgrounds/dashBg.svg") no-repeat;
+    background-size: cover;
+    background-position-y: center;
+    background-position-x: center;
+  }
+  .title {
+    height: fit-content;
+    padding: 30px 20px 0 20px;
+  }
+  .title h1 {
+    font-size: 52px;
+  }
+  .content {
+    height: fit-content;
+    padding: 20px 0;
+    background-color: transparent;
+    border-radius: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+  }
+}
+@media screen and (min-width: 1400px) {
+  .title h1 {
+    font-size: 72px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  .title h1 {
+    font-size: 92px;
+  }
 }
