--- a/src/components/cards/HorizontalCard.module.css
+++ b/src/components/cards/HorizontalCard.module.css
@@ -1,10 +1,10 @@
 .card {
-  background-color: #d9d9d9;
+  background-color: #ffffff;
   display: flex;
   padding: 25px 25px;
   gap: 20px;
   height: 70vh;
-  border-radius: 20px;
+  border-radius: 50px;
   align-items: center;
   flex-direction: column-reverse;
   letter-spacing: 8px;
