--- a/src/components/studentProfile/ProfileImage.module.css
+++ b/src/components/studentProfile/ProfileImage.module.css
@@ -1,6 +1,6 @@
 .wrapper {
-  width: 200px;
-  height: 200px;
+  width: 100%;
+  height: 100%;
   overflow: hidden;
   display: flex;
   align-items: center;
