--- a/src/components/studentProfile/StudentProfile.module.css
+++ b/src/components/studentProfile/StudentProfile.module.css
@@ -1,6 +1,6 @@
 :root {
   --swiper-navigation-color: #a4a4a4;
-  --swiper-navigation-size: 22px;
+  --swiper-navigation-size: 24px;
 }
 .container {
   display: flex;
@@ -19,27 +19,87 @@
   width: 100%;
   text-transform: capitalize;
   overflow: hidden;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 28px;
   padding: 5px 0 8px 0;
 }
 .swiper {
-  padding: 0 6px;
-  border-radius: 50px;
-  width: 90%;
+  width: 100%;
   text-align: center;
-  border: 1.5px solid #a4a4a4;
   font-family: Quicksand, sans-serif;
-  font-weight: 600;
-  font-size: 18px;
-  box-shadow: rgba(80, 80, 80, 0.47) 0 0 7px;
-}
-.swiper p {
-  padding: 20px 0;
-  margin: 0;
+  font-weight: 500;
 }
 
 .imgwrapper {
   width: 100px;
   height: 100px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 40px;
+  color: #333333;
+}
+
+.content h1 {
+  font-size: 32px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #fd9f09;
+  font-family: Inter, sans-serif;
+}
+.content p {
+  text-align: left;
+  padding: 0;
+  margin: 8px;
+  font-size: 14px;
+  color: #333333;
+  font-weight: 700;
+  font-family: Inter, sans-serif;
+}
+.content a {
+  font-family: Quicksand, sans-serif;
+  font-weight: 500;
+  color: #333333;
+}
+.btnwrapper {
+  margin-top: 6%;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 10px;
+}
+.modbtns {
+  display: flex;
+  width: 100%;
+  gap: 10px;
+}
+.modbtns button {
+  width: 100%;
+}
+.btnwrapper button {
+  background-color: #eaeaea;
+  font-size: 18px;
+  border: none;
+  padding: 14px 0;
+  border-radius: 10px;
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+.modbtns button:nth-child(2) {
+  background-color: #dc3545;
+  color: #ffffff;
+}
+.swiper table {
+  text-align: right;
+}
+.swiper button:hover {
+  background-color: #c7c7c7;
+}
+.modbtns button:nth-child(2):hover {
+  background-color: #c9323f;
 }
