--- a/src/components/studentProfile/ProfileImage.module.css
+++ b/src/components/studentProfile/ProfileImage.module.css
@@ -1,14 +1,13 @@
 .wrapper {
   width: 100%;
-  height: 100%;
   overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 500px;
+  border-radius: 100%;
   background-color: #333333;
 }
 .wrapper img {
   width: 100%;
-  border-radius: 500px;
+  border-radius: 100%;
 }
