--- a/src/components/studentProfile/StudentProfile.module.css
+++ b/src/components/studentProfile/StudentProfile.module.css
@@ -111,6 +111,7 @@
   text-align: right;
   font-size: 18px;
   font-weight: 500;
+  text-transform: lowercase;
 }
 .swiper button:hover {
   background-color: #c7c7c7;
