--- a/src/components/modals/ImageModal/ImageModal.module.css
+++ b/src/components/modals/ImageModal/ImageModal.module.css
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 .image {
   width: 60%;
@@ -18,6 +19,24 @@
 .image img {
   width: 100%;
   border-radius: 100%;
+}
+.manageBtns {
+  cursor: pointer;
+  margin-top: 2%;
+  color: #fd9f09;
+  font-weight: 600;
+  font-family: Quicksand, sans-serif;
+  font-size: 20px;
+  gap: 14px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.manageBtns div {
+  transition-duration: 200ms;
+}
+.manageBtns div:hover {
+  color: #fff;
 }
 
 @media screen and (min-width: 1000px) {
