--- a/src/components/studentProfile/ProfileImage.module.css
+++ b/src/components/studentProfile/ProfileImage.module.css
@@ -6,6 +6,7 @@
   justify-content: center;
   border-radius: 100%;
   background-color: #333333;
+  aspect-ratio: 1 / 1;
 }
 .wrapper img {
   width: 100%;
