--- a/src/components/modals/Inscription/Inscription.module.css
+++ b/src/components/modals/Inscription/Inscription.module.css
@@ -30,6 +30,8 @@
   text-align: center;
   width: 100%;
   padding: 4px;
+  border: solid 1px #a4a4a4;
+  border-radius: 10px;
 }
 .col2 input:focus {
   outline: none;
@@ -83,4 +85,48 @@
 .wrapper span {
   color: #fd9f09;
   font-size: 20px;
+}
+
+@media screen and (min-width: 1000px) {
+  .wrapper {
+    flex-direction: row;
+    gap: 30px;
+  }
+  .header h1 {
+    font-size: 32px;
+  }
+  .wrapper table {
+    font-size: 18px;
+  }
+  .imagewrap {
+    padding-bottom: 10px;
+  }
+  .imagewrap h1 {
+    font-size: 20px;
+  }
+  .btn {
+    margin: 0;
+  }
+  .btn button {
+    font-size: 20px;
+    border: none;
+    background: #fd9f09;
+    color: #fff;
+    font-family: Quicksand, sans-serif;
+    padding: 8px 30px;
+    font-weight: 600;
+    border-radius: 20px;
+    margin: 0;
+  }
+  .btn button:hover {
+    background-color: #e78e06;
+  }
+  .col2 input::placeholder {
+    font-size: 16px;
+    letter-spacing: 0;
+  }
+  .wrapper span {
+    color: #fd9f09;
+    font-size: 24px;
+  }
 }
