--- a/src/pages/Dashboard.module.css
+++ b/src/pages/Dashboard.module.css
@@ -1,7 +1,7 @@
-body {
+.body {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   background: #fd9f09;
   background: linear-gradient(
     180deg,
