--- a/src/pages/Etudiants.module.css
+++ b/src/pages/Etudiants.module.css
@@ -1,10 +1,13 @@
 .page {
   width: 100%;
-  background: #fd9f09;
+  background: transparent;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 .page h1 {
-  background: #fd9f09 url("@/assets/images/backgrounds/loadingMobileBg.svg")
-    no-repeat center center fixed;
+  background: url("@/assets/images/backgrounds/loadingMobileBg.svg") no-repeat
+    center center fixed;
   background-size: cover;
   padding: 40px 0;
   margin: 0;
@@ -19,6 +22,9 @@
 .content {
   background-color: white;
   padding-bottom: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 .table {
   width: 100%;
@@ -137,12 +143,13 @@
   grid-template-columns: 1fr 2fr;
   justify-content: space-between;
   align-items: center;
-  padding: 2% 1.2%;
+  padding: 2% 2% 2% 0;
+
   gap: 5%;
 }
 .sort {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   gap: 2px;
 }
@@ -172,4 +179,129 @@
 }
 .searchfield {
   font-size: 12px;
+}
+.sort button {
+  --bs-btn-bg: transparent;
+  --bs-btn-active-bg: transparent;
+  --bs-btn-active-border-color: transparent;
+  --bs-btn-border-color: transparent;
+  --bs-btn-active-color: #fd9f09;
+  color: #fd9f09;
+  font-weight: 700;
+  --bs-btn-hover-bg: transparent;
+  --bs-btn-hover-border-color: transparent;
+  --bs-btn-hover-color: #fd9f09;
+}
+
+.empty {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.empty h1 {
+  font-size: 26px;
+  background: none;
+  color: #fd9f09;
+}
+
+.loading {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex: 1;
+  width: 100%;
+  color: #fd9f09;
+  font-size: 24px;
+}
+.loading * {
+  scale: 1.3;
+}
+@media screen and (min-width: 1000px) {
+  .page h1 {
+    padding: 30px 0;
+    font-size: 52px;
+  }
+  .content {
+    background-color: white;
+    padding-bottom: 20px;
+    min-height: 100%;
+  }
+  .table {
+    width: 100%;
+  }
+  .namecol {
+    width: 85%;
+    font-size: 24px;
+  }
+  .table td:first-child {
+    padding-left: 30px;
+  }
+  .table td {
+    padding: 5px 0;
+  }
+  .table button {
+    font-size: 21px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .controlbtns nav {
+    gap: 5px;
+  }
+  .controlbtns nav button {
+    font-size: 21px;
+  }
+  .controlbtns nav button:first-child {
+    font-size: 25px;
+  }
+  .controlbtns nav button:last-child {
+    font-size: 25px;
+  }
+  .filters {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1% 1.3% 1% 0.5%;
+    gap: 5%;
+  }
+  .sort {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+  }
+
+  .arrbtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+  }
+  .arrbtn p {
+    margin: 0;
+  }
+  .sort a {
+    font-size: 18px;
+  }
+  .sort button {
+    font-size: 21px;
+  }
+  .searchbtn {
+    font-size: 21px;
+  }
+  .searchfield {
+    font-size: 18px;
+  }
+
+  .empty h1 {
+    font-size: 32px;
+  }
 }
