--- a/src/components/AddBtn/addBtn.module.css
+++ b/src/components/AddBtn/addBtn.module.css
@@ -9,6 +9,7 @@
   align-items: center;
   cursor: pointer;
   bottom: 0;
+  right: 0;
   border: solid #fd9f09 3px;
   margin: 10px;
   transition-duration: 400ms;
@@ -23,9 +24,8 @@
 }
 .container:hover > svg {
   color: white;
-  scale: 1.4;
+  scale: 1.3;
 }
-
 @media screen and (max-width: 999.99px) {
   .container {
     width: 50px;
